Source/WebKit2/Shared/ImageOptions.h
@@ -37,7 +37,6 @@ enum {
     SnapshotOptionsExcludeSelectionHighlighting = 1 << 1,
     SnapshotOptionsInViewCoordinates = 1 << 2,
     SnapshotOptionsPaintSelectionRectangle = 1 << 3,
-    SnapshotOptionsRespectDrawingAreaTransform = 1 << 4,
     SnapshotOptionsExcludeDeviceScaleFactor = 1 << 5,
 };
 typedef uint32_t SnapshotOptions;
