Source/WebKit2/UIProcess/API/Cocoa/_WKThumbnailView.mm
@@ -52,8 +52,6 @@ using namespace WebKit;
     BOOL _originalMayStartMediaWhenInWindow;
     BOOL _originalSourceViewIsInWindow;
 
-    BOOL _shouldApplyThumbnailScale;
-
     BOOL _snapshotWasDeferred;
     double _lastSnapshotScale;
 }
@@ -76,16 +74,11 @@ using namespace WebKit;
     _originalMayStartMediaWhenInWindow = _webPageProxy->mayStartMediaWhenInWindow();
     _originalSourceViewIsInWindow = !![_wkView window];
 
-    _shouldApplyThumbnailScale = !_originalSourceViewIsInWindow;
-
     return self;
 }
 
 - (void)_viewWasUnparented
 {
-    if (_shouldApplyThumbnailScale)
-        _webPageProxy->setThumbnailScale(1);
-
     [_wkView _setThumbnailView:nil];
 
     self.layer.contents = nil;
@@ -99,9 +92,6 @@ using namespace WebKit;
     if ([_wkView _thumbnailView])
         return;
 
-    if (_shouldApplyThumbnailScale)
-        _webPageProxy->setThumbnailScale(_scale);
-
     if (!_originalSourceViewIsInWindow)
         _webPageProxy->setMayStartMediaWhenInWindow(false);
 
@@ -111,9 +101,6 @@ using namespace WebKit;
 
 - (void)_requestSnapshotIfNeeded
 {
-    if (!_usesSnapshot)
-        return;
-
     if (self.layer.contents && _lastSnapshotScale == _scale)
         return;
 
@@ -126,7 +113,7 @@ using namespace WebKit;
 
     RetainPtr<_WKThumbnailView> thumbnailView = self;
     IntRect snapshotRect(IntPoint(), _webPageProxy->viewSize() - IntSize(0, _webPageProxy->topContentInset()));
-    SnapshotOptions options = SnapshotOptionsRespectDrawingAreaTransform | SnapshotOptionsInViewCoordinates;
+    SnapshotOptions options = SnapshotOptionsInViewCoordinates;
     IntSize bitmapSize = snapshotRect.size();
     bitmapSize.scale(_scale * _webPageProxy->deviceScaleFactor());
     _lastSnapshotScale = _scale;
@@ -166,31 +153,19 @@ using namespace WebKit;
 
     _scale = scale;
 
-    if (self.window && _shouldApplyThumbnailScale)
-        _webPageProxy->setThumbnailScale(_scale);
-
-    if (_usesSnapshot)
-        [self _requestSnapshotIfNeeded];
+    [self _requestSnapshotIfNeeded];
 
     self.layer.sublayerTransform = CATransform3DMakeScale(_scale, _scale, 1);
 }
 
+// This should be removed when all clients go away; it is always YES now.
 - (void)setUsesSnapshot:(BOOL)usesSnapshot
 {
-    if (_usesSnapshot == usesSnapshot)
-        return;
+}
 
-    _usesSnapshot = usesSnapshot;
-
-    if (!self.window)
-        return;
-
-    if (usesSnapshot)
-        [self _requestSnapshotIfNeeded];
-    else {
-        _webPageProxy->setThumbnailScale(_scale);
-        [_wkView _reparentLayerTreeInThumbnailView];
-    }
+- (BOOL)usesSnapshot
+{
+    return YES;
 }
 
 - (void)_setThumbnailLayer:(CALayer *)layer
